# python_base

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml
src/base/: __init__.py  main.py
